SFUSA/force-app/main/default/objects/Campaign__c/fields/GLCode__c.field-meta.xml
<CustomField>
        <fullName>GLCode__c</fullName>
        <label>GL Code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>GLDescription__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>15010</fullName>
                </value>
                <value>
                    <fullName>15020</fullName>
                </value>
                <value>
                    <fullName>15030</fullName>
                </value>
                <value>
                    <fullName>15040</fullName>
                </value>
                <value>
                    <fullName>15050</fullName>
                </value>
                <value>
                    <fullName>15060</fullName>
                </value>
                <value>
                    <fullName>15070</fullName>
                </value>
                <value>
                    <fullName>15080</fullName>
                </value>
                <value>
                    <fullName>15100</fullName>
                </value>
                <value>
                    <fullName>15110</fullName>
                </value>
                <value>
                    <fullName>15115</fullName>
                </value>
                <value>
                    <fullName>15130</fullName>
                </value>
                <value>
                    <fullName>15140</fullName>
                </value>
                <value>
                    <fullName>15150</fullName>
                </value>
                <value>
                    <fullName>15160</fullName>
                </value>
                <value>
                    <fullName>15170</fullName>
                </value>
                <value>
                    <fullName>15180</fullName>
                </value>
                <value>
                    <fullName>15410</fullName>
                </value>
                <value>
                    <fullName>15420</fullName>
                </value>
                <value>
                    <fullName>15430</fullName>
                </value>
                <value>
                    <fullName>15440</fullName>
                </value>
                <value>
                    <fullName>15450</fullName>
                </value>
                <value>
                    <fullName>15470</fullName>
                </value>
                <value>
                    <fullName>15490</fullName>
                </value>
                <value>
                    <fullName>15500</fullName>
                </value>
                <value>
                    <fullName>15510</fullName>
                </value>
                <value>
                    <fullName>15800</fullName>
                </value>
                <value>
                    <fullName>15810</fullName>
                </value>
                <value>
                    <fullName>15820</fullName>
                </value>
                <value>
                    <fullName>15850</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>