SFUSA/force-app/main/default/objects/Campaign__c/fields/Has_Child_Campaigns__c.field-meta.xml
<CustomField>
        <fullName>Has_Child_Campaigns__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Master campaign has a child</description>
        <label>Has Child Campaigns</label>
        <type>Checkbox</type>
    </CustomField>