SFUSA/force-app/main/default/objects/Campaign__c/fields/Is_Budget_Change__c.field-meta.xml
<CustomField>
        <fullName>Is_Budget_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Budget Change</label>
        <type>Checkbox</type>
    </CustomField>