SFUSA/force-app/main/default/objects/Campaign__c/fields/National_Account_Manager__c.field-meta.xml
<CustomField>
        <fullName>National_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>National Account Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </CustomField>