SFUSA/force-app/main/default/objects/Campaign__c/fields/NationalAccount__c.field-meta.xml
<CustomField>
        <fullName>NationalAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>National Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.ActivelyManaged__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns (National Account)</relationshipLabel>
        <relationshipName>Campaigns1</relationshipName>
        <type>Lookup</type>
    </CustomField>