SFUSA/force-app/main/default/objects/Campaign__c/fields/Objective__c.field-meta.xml
<CustomField>
        <fullName>Objective__c</fullName>
        <label>Objective (JTBDI)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Strategy__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Bartender training and education</fullName>
                </value>
                <value>
                    <fullName>BIG GINGER On-Premise Menus/Features</fullName>
                </value>
                <value>
                    <fullName>BIG GINGER sampling</fullName>
                </value>
                <value>
                    <fullName>Build 10YO distribution</fullName>
                </value>
                <value>
                    <fullName>Build big, impactful displays</fullName>
                </value>
                <value>
                    <fullName>Build Wine and Vodka on-premise</fullName>
                </value>
                <value>
                    <fullName>Close distribution gaps</fullName>
                </value>
                <value>
                    <fullName>Close distribution gaps to Smirnoff</fullName>
                </value>
                <value>
                    <fullName>Close distribution gaps with Bacardi</fullName>
                </value>
                <value>
                    <fullName>Co-display with Casa Sauza family</fullName>
                </value>
                <value>
                    <fullName>Connect JT in-store and on-premise</fullName>
                </value>
                <value>
                    <fullName>Cross merchandising at retail</fullName>
                </value>
                <value>
                    <fullName>Devil’s Cut and Flavors on-premise activation</fullName>
                </value>
                <value>
                    <fullName>Displays via secondary placement</fullName>
                </value>
                <value>
                    <fullName>Distribution of JDK &amp; Sons</fullName>
                </value>
                <value>
                    <fullName>Drive display and increase velocity</fullName>
                </value>
                <value>
                    <fullName>Drive distribution</fullName>
                </value>
                <value>
                    <fullName>Drive distribution in focus channels</fullName>
                </value>
                <value>
                    <fullName>Drive distribution of KC variants</fullName>
                </value>
                <value>
                    <fullName>Drive distribution on Devil’s Cut</fullName>
                </value>
                <value>
                    <fullName>Drive hitchhikers in the marketplace</fullName>
                </value>
                <value>
                    <fullName>Drive Maker’s 46 distribution</fullName>
                </value>
                <value>
                    <fullName>Drive menu &amp; back bar placement</fullName>
                </value>
                <value>
                    <fullName>Drive on-premise distribution</fullName>
                </value>
                <value>
                    <fullName>Drive on-premise distribution (JBW, DC, Flavors)</fullName>
                </value>
                <value>
                    <fullName>Drive Sauza Blue distribution</fullName>
                </value>
                <value>
                    <fullName>Drive shot machines</fullName>
                </value>
                <value>
                    <fullName>Drive trial of new products and categories</fullName>
                </value>
                <value>
                    <fullName>Drive trial on flavors</fullName>
                </value>
                <value>
                    <fullName>Engage bartenders</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>