SFUSA/force-app/main/default/objects/Campaign__c/fields/ON_OFF_Premise__c.field-meta.xml
<CustomField>
        <fullName>ON_OFF_Premise__c</fullName>
        <label>ON/OFF Premise</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ON Premise</fullName>
                </value>
                <value>
                    <fullName>OFF Premise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>