SFUSA/force-app/main/default/objects/Campaign__c/fields/Owner__c.field-meta.xml
<CustomField>
        <fullName>Owner__c</fullName>
        <label>Owner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FBS/BTL/OFF PREMISE</fullName>
                </value>
                <value>
                    <fullName>RTD/BTL/OFF PREMISE</fullName>
                </value>
                <value>
                    <fullName>BTL/ON PREMISE</fullName>
                </value>
                <value>
                    <fullName>THE BLEND</fullName>
                </value>
                <value>
                    <fullName>FBS/ATL</fullName>
                </value>
                <value>
                    <fullName>RTD/ATL</fullName>
                </value>
                <value>
                    <fullName>PENDULUM</fullName>
                </value>
                <value>
                    <fullName>RESEARCH – SYND</fullName>
                </value>
                <value>
                    <fullName>RESEARCH – CONSUMER</fullName>
                </value>
                <value>
                    <fullName>RESEARCH – INNOVATION</fullName>
                </value>
                <value>
                    <fullName>RESEARCH – ADHOC</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
                <value>
                    <fullName>ON PREMISE</fullName>
                </value>
                <value>
                    <fullName>INNOVATION - BT</fullName>
                </value>
                <value>
                    <fullName>BT INNOVATION</fullName>
                </value>
                <value>
                    <fullName>TCC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>