SFUSA/force-app/main/default/objects/Campaign__c/fields/ParentProgram__c.field-meta.xml
<CustomField>
        <fullName>ParentProgram__c</fullName>
        <description>Parent marketing plans program</description>
        <formula>ParentMarketingPlan__r.Related_Program__c</formula>
        <label>ParentProgram</label>
        <type>Text</type>
    </CustomField>