SFUSA/force-app/main/default/objects/Campaign__c/fields/PlannedCampaignSpend_USD_Formula__c.field-meta.xml
<CustomField>
        <fullName>PlannedCampaignSpend_USD_Formula__c</fullName>
        <formula>IF(ISNULL(PlannedCampaignSpend_USD_Hidden__c), NULL, ROUND(PlannedCampaignSpend_USD_Hidden__c,2))</formula>
        <label>Campaign Budget (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>