SFUSA/force-app/main/default/objects/Campaign__c/fields/PlannedCampaignSpend_USD_Hidden__c.field-meta.xml
<CustomField>
        <fullName>PlannedCampaignSpend_USD_Hidden__c</fullName>
        <label>Campaign Budget USD (Hidden)</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>