SFUSA/force-app/main/default/objects/Campaign__c/fields/Platform__c.field-meta.xml
<CustomField>
        <fullName>Platform__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related platform for this campaign</description>
        <label>Platform</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Program__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Platform</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Campaigns (Platform)</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </CustomField>